[package]
name = "masquerade-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty = { git = "https://github.com/TheBobBobs/volty.git" }

dotenvy = "0.15"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
mongodb = { version = "2.7", features = ["tokio-runtime"] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16", features = ["derive"] }
