[package]
name = "masquerade-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty = { git = "https://github.com/TheBobBobs/volty.git" }

dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
mongodb = "3"
once_cell = "1.20"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.19", features = ["derive"] }
